# bazel-ide

./: .bazelrc  .buildifier.json  .envrc  .gitignore  .pre-commit-config.yaml  .shuck.toml  .yamllint  BUILD.bazel  Cargo.toml  MODULE.aspect  MODULE.bazel  README.md  gazelle_python.yaml  main.rs  multitool.lock.json  pyproject.toml  renovate.json  requirements_lock.txt
.aspect/bazelrc/: BUILD.bazel
.aspect/workflows/: README.md  buildkite.yaml  config.yaml
.devcontainer/: devcontainer.json  on_create.sh  post_create.sh
.github/workflows/: ci.yaml
examples/cpp/: BUILD.bazel  README.md  main.cpp  math_utils.cpp
examples/cpp/include/: math_utils.h
examples/cpp/tests/: math_utils_test.cpp
examples/py/: BUILD.bazel  README.md  foo.py
examples/py/tests/: BUILD.bazel  test_foo.py
examples/rust/: BUILD.bazel  README.md
examples/rust/src/: main.rs  math_utils.rs
examples/rust/src/tests/: math_utils_test.rs
tools/: BUILD.bazel
tools/pytest/: defs.bzl
