module(name = "bazel_ide")

# keep-sorted start
bazel_dep(name = "aspect_rules_py", version = "1.6.6")
bazel_dep(name = "bazel_env.bzl", version = "0.5.0")
bazel_dep(name = "bazel_lib", version = "3.0.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.8.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2")
bazel_dep(name = "buildozer", version = "8.2.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "jq.bzl", version = "0.4.0")
bazel_dep(name = "rules_cc", version = "0.2.15")
bazel_dep(name = "rules_coreutils", version = "1.0.1")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "rules_uv", version = "0.89.2")
bazel_dep(name = "tar.bzl", version = "0.7.0")
bazel_dep(name = "yq.bzl", version = "0.3.2")
# keep-sorted end

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "hedron_compile_commands",
    sha256 = "c8029e92da302f0a32fd0d4059358c8657b5cb82628000b7b5e259c73f91882d",
    strip_prefix = "bazel-compile-commands-extractor-4f28899228fb3ad0126897876f147ca15026151e",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/4f28899228fb3ad0126897876f147ca15026151e.zip",
)

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python, "python_3_12", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "python_deps",
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "python_deps")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    rustfmt_version = "1.90.0",
    versions = ["1.90.0"],
)
use_repo(rust, "rust_toolchains")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:multitool.lock.json")
use_repo(multitool, "multitool")

jq_toolchains = use_extension("@jq.bzl//jq:extensions.bzl", "toolchains")
use_repo(jq_toolchains, "jq_toolchains")

yq_toolchains = use_extension("@yq.bzl//yq:extensions.bzl", "yq")
use_repo(yq_toolchains, "yq_toolchains")

tar_toolchains = use_extension("@tar.bzl//tar:extensions.bzl", "toolchains")
use_repo(tar_toolchains, "bsd_tar_toolchains")
