module(name = "bazel_ide")

# keep-sorted start
bazel_dep(name = "aspect_gazelle_prebuilt", version = "0.0.8")
bazel_dep(name = "aspect_rules_py", version = "1.11.2")
bazel_dep(name = "bazel_env.bzl", version = "0.7.2")
bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")
bazel_dep(name = "buildozer", version = "8.5.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "jq.bzl", version = "0.6.1")
bazel_dep(name = "llvm", version = "0.7.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_coreutils", version = "1.0.1")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "rules_python", version = "1.9.0")  # required only for hedron_compile_commands
bazel_dep(name = "rules_rs", version = "0.0.58")
bazel_dep(name = "tar.bzl", version = "0.10.1")
bazel_dep(name = "yq.bzl", version = "0.3.6")
# keep-sorted end

register_toolchains("@llvm//toolchain:all")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "hedron_compile_commands",
    patches = ["//third_party:bazel-compile-commands-extractor.patch"],
    sha256 = "c8029e92da302f0a32fd0d4059358c8657b5cb82628000b7b5e259c73f91882d",
    strip_prefix = "bazel-compile-commands-extractor-4f28899228fb3ad0126897876f147ca15026151e",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/4f28899228fb3ad0126897876f147ca15026151e.zip",
)

interpreters = use_extension("@aspect_rules_py//py/unstable:extension.bzl", "python_interpreters")
interpreters.toolchain(
    is_default = True,
    python_version = "3.12",
)
use_repo(interpreters, "python_interpreters")

register_toolchains("@python_interpreters//:all")

uv = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv")
uv.declare_hub(
    hub_name = "python_deps",
)
uv.project(
    hub_name = "python_deps",
    lock = "//:uv.lock",
    pyproject = "//:pyproject.toml",
)
use_repo(uv, "python_deps")

toolchains = use_extension("@rules_rs//rs/experimental/toolchains:module_extension.bzl", "toolchains")
toolchains.toolchain(
    edition = "2024",
    rustfmt_version = "1.92.0",
    version = "1.92.0",
)
use_repo(toolchains, "default_rust_toolchains")

register_toolchains("@default_rust_toolchains//:all")

rules_rust = use_extension("@rules_rs//rs/experimental:rules_rust.bzl", "rules_rust")
use_repo(rules_rust, "rules_rust")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:multitool.lock.json")
use_repo(multitool, "multitool")

jq_toolchains = use_extension("@jq.bzl//jq:extensions.bzl", "toolchains")
use_repo(jq_toolchains, "jq_toolchains")

yq_toolchains = use_extension("@yq.bzl//yq:extensions.bzl", "yq")
use_repo(yq_toolchains, "yq_toolchains")

tar_toolchains = use_extension("@tar.bzl//tar:extensions.bzl", "toolchains")
use_repo(tar_toolchains, "bsd_tar_toolchains")
