load("@bazel_env.bzl", "bazel_env")
load("@bazelrc-preset.bzl", "bazelrc_preset")
load("@buildozer//:buildozer.bzl", "BUILDOZER_LABEL")
load("@multitool//:tools.bzl", MULTITOOL_TOOLS = "TOOLS")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

alias(
    name = "bazel-diff",
    actual = "@bazel-diff//cli:bazel-diff",
)

bazelrc_preset(
    name = "preset",
)

py_console_script_binary(
    name = "whoowns",
    pkg = "@python_deps//dev_tools",
)

py_console_script_binary(
    name = "configure-vscode-for-bazel",
    pkg = "@python_deps//dev_tools",
)

bazel_env(
    name = "bazel_env",
    toolchains = {
        "cc_toolchain": "@bazel_tools//tools/cpp:current_cc_toolchain",
        "jq": "@jq_toolchains//:resolved_toolchain",
        "python": "@rules_python//python:current_py_toolchain",
        "tar": "@bsd_tar_toolchains//:resolved_toolchain",
        "yq": "@yq_toolchains//:resolved_toolchain",
    },
    tools = {
        "bazel-cc": "$(CC)",
        "buildifier": "@buildifier_prebuilt//:buildifier",
        "buildozer": BUILDOZER_LABEL,
        "cargo": "@rules_rust//tools/upstream_wrapper:cargo",
        "ccb": ":configure-vscode-for-bazel",
        "configure-vscode-for-bazel": ":configure-vscode-for-bazel",
        "jq": "$(JQ_BIN)",
        "python": "$(PYTHON3)",
        "python3": "$(PYTHON3)",
        "rustc": "@rules_rust//tools/upstream_wrapper:rustc",
        "rustdoc": "@rules_rust//tools/upstream_wrapper:rustdoc",
        "rustfmt": "@rules_rust//tools/upstream_wrapper:rustfmt",
        "sha256sum": "@rules_coreutils//coreutils/toolchain/sha256sum:resolved",
        "tar": "$(BSDTAR_BIN)",
        "whoowns": ":whoowns",
        "yq": "$(YQ_BIN)",
    } | MULTITOOL_TOOLS,
)
