load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

# gazelle:cc_group subdirectory
# gazelle:cc_group_subdirectory_test tests
# gazelle:resolve cc gtest/gtest.h @googletest//:gtest_main

cc_library(
    name = "math_utils",
    srcs = ["math_utils.cpp"],
    hdrs = ["include/math_utils.h"],
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    deps = [":math_utils"],
)

cc_test(
    name = "cpp_test",
    srcs = ["tests/math_utils_test.cpp"],
    deps = [
        ":math_utils",
        "@googletest//:gtest_main",
    ],
)
