load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "math_utils",
    srcs = ["src/math_utils.rs"],
)

rust_binary(
    name = "main",
    srcs = ["src/main.rs"],
    deps = [":math_utils"],
)

rust_test(
    name = "math_utils_test",
    size = "small",
    srcs = ["src/tests/math_utils_test.rs"],
    deps = [":math_utils"],
)
