load("@rules_rs//rust:rust_library.bzl", "rust_library")
load("@rules_rs//rust:rust_binary.bzl", "rust_binary")
load("@rules_rs//rust:rust_test.bzl", "rust_test")

rust_library(
    name = "math_utils",
    srcs = ["src/math_utils.rs"],
)

rust_binary(
    name = "main",
    srcs = ["src/main.rs"],
    deps = [":math_utils"],
)

rust_test(
    name = "math_utils_test",
    size = "small",
    srcs = ["src/tests/math_utils_test.rs"],
    deps = [":math_utils"],
)
